# sinner2

./: .flake8  .gitattributes  .gitignore  README.md  conftest.py  doctor.bat  doctor.sh  install.bat  install.sh  pyproject.toml  update.bat  update.sh
.github/workflows/: checks.yml  ci.yml  release.yml
docs/: audit-findings.md  ideas.md  models-todo.md
installer/: __init__.py  detect.py  doctor.py  plan.py  steps.py  update.py  wizard.py
scripts/: audio_resume_test.py  bench_write.py  enhancer_bench.py  fp16_bench.py  landmark_refine_ab.py  stream_test.py  swapper_bench.py  upscaler_bench.py
src/sinner2/: __init__.py  observable.py  types.py
src/sinner2/audio/: audio_backend.py  qt_audio_backend.py
src/sinner2/batch/: defaults.py  driver.py  queue.py  stage.py  task.py  task_store.py
src/sinner2/cli/: smoke.py
src/sinner2/config/: base.py  execution.py  media_extensions.py  settings.py  source.py  target.py
src/sinner2/gui/: __main__.py  audio_controller.py  batch_coordinator.py  cache_controller.py  cache_management_controller.py  confirm.py  face_detection_probe.py  face_map_controller.py  face_map_job.py  face_overlay_controller.py  fullscreen_controller.py  icon.py  live_controller.py  main_window.py  metrics_overlay_controller.py  model_download.py  player_controller.py  preprocess_controller.py  processor_snapshot.py  project.py  provider_status_controller.py  session_builder.py  session_capabilities.py  session_facade.py  settings_binder.py  swap_coordinator.py  sync_tracer.py
src/sinner2/io/: cv2_unicode.py  cv2_video_target_reader.py  frame_resize.py  reader_pool.py  target_reader.py  video_backend.py  video_encoder.py  video_target_reader.py
src/sinner2/pipeline/: cache_manager.py  cache_mode.py  chain_builder.py  detectors.py  face_analyser.py  face_geometry.py  face_map.py  face_map_analyzer.py  face_map_geometry.py  face_map_store.py  image_writer.py  memory_probe.py  messages.py  model_cache.py  models_catalog.py  playback_mode.py  processor.py  sections.py  skip_strategy.py  temporal_smoothing.py
tests/: test_observable.py
tests/audio/: test_audio_backend.py  test_qt_audio_backend.py
tests/batch/: test_defaults.py  test_driver.py  test_queue.py  test_stage.py  test_task.py  test_task_store.py
tests/cli/: test_smoke.py
tests/config/: test_base.py  test_execution.py  test_media_extensions.py  test_settings.py  test_source.py  test_target.py
tests/e2e/: test_pipeline_e2e.py
tests/gui/: conftest.py  test_audio_controller.py  test_cache_controller.py  test_cache_management_controller.py  test_confirm.py  test_face_detection_probe.py  test_face_map_controller.py  test_face_map_job.py  test_face_overlay_logic.py  test_fullscreen_controller.py  test_icon.py  test_live_controller.py  test_main_window.py  test_metrics_overlay_controller.py  test_model_download.py  test_player_controller_adopt_position.py  test_player_controller_audio.py  test_player_controller_audio_switch.py  test_player_controller_cache_cap.py  test_player_controller_cache_key.py  test_player_controller_capabilities.py  test_player_controller_chain_compose.py  test_player_controller_chain_refresh.py  test_player_controller_change_paths.py  test_player_controller_face_map.py  test_player_controller_keyboard_transport.py  test_player_controller_sections.py  test_player_controller_setup_failure.py  test_player_controller_swap_failure_audio.py  test_player_controller_swap_shutdown_leak.py  test_player_controller_video_backend.py  test_player_controller_worker_cap.py  test_preprocess_controller.py  test_project.py  test_provider_status_controller.py  test_session_builder.py  test_session_capabilities.py  test_session_facade.py  test_settings_binder.py  test_swap_coordinator.py  (+2 more)
tests/gui/bridges/: test_observable_bridge.py  test_thread_safe_callback.py
tests/gui/widgets/: test_batch_task_dialog.py  test_batch_view.py  test_busy_caption.py  (+20 more)
tests/installer/: test_detect.py  test_doctor.py  test_plan.py  test_steps.py  test_update.py  test_wizard.py
tests/io/: test_cv2_unicode.py  test_cv2_video_target_reader.py  test_frame_resize.py  test_reader_pool.py  test_target_reader.py  test_video_encoder.py  test_video_target_reader.py  test_video_target_reader_eof.py
tests/pipeline/: test_cache_manager.py  test_chain_builder.py  test_cuda_preload.py  test_detectors.py  test_face_analyser.py  test_face_geometry.py  test_face_map.py  test_face_map_analyzer.py  test_face_map_geometry.py  test_face_map_store.py  test_image_writer.py  test_memory_probe.py  test_messages.py  test_model_cache.py  test_model_download.py  test_models_catalog.py  test_processor.py  test_sections.py  test_skip_strategy.py  test_temporal_smoothing.py
(+87 files in other folders)
