[project]
name = "sinner2"
version = "0.1.0"
description = "Face processing pipeline with realtime preview"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2",
    "numpy>=2",
    "opencv-python-headless>=4.10",
]

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.20",
    "torch>=2.7",
    "insightface>=0.7.3",
    "gfpgan>=1.3.8",
]
cuda118 = [
    "onnxruntime-gpu>=1.18,<1.19",
    "torch",
    "insightface>=0.7.3",
    "gfpgan>=1.3.8",
]
cpu = [
    "onnxruntime>=1.20",
    "torch>=2.7",
    "insightface>=0.7.3",
    "gfpgan>=1.3.8",
]
mac-arm = [
    "onnxruntime>=1.20",
    "torch>=2.7",
    "insightface>=0.7.3",
    "gfpgan>=1.3.8",
]
gui = [
    "PySide6>=6.8",
]
dev = [
    "pytest>=8",
    "pytest-mock",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sinner2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src/sinner2"]
